# ijepa

./: .gitignore  main.py  pyproject.toml  voxceleb2_normalization_stats.json
configs/: in1k_vith14_ep300.yaml  voxceleb2_vith16-448_ep300.yaml
src/: helper.py  train.py
src/datasets/: voxceleb2.py
src/masks/: multiblock.py
src/models/: vision_transformer.py
src/utils/: distributed.py
